# heart-attack-predictor

./: README.md
.github/workflows/: ci.yml
heart-disease-mlops/: environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
heart-disease-mlops/docker/: Dockerfile
heart-disease-mlops/k8s/: README.md  deployment.yaml  service.yaml
heart-disease-mlops/models/: training_meta.json
heart-disease-mlops/monitoring/: prometheus.yml
heart-disease-mlops/notebooks/: 01_eda.ipynb
heart-disease-mlops/reports/: MLOps_Assignment_Report.docx  MLOps_Assignment_Report.md  pdf-print.css
heart-disease-mlops/scripts/: docx_report.sh  download_data.py  k8s_deploy_podman.sh  pdf_report.sh  run_api.sh
heart-disease-mlops/src/api/: __init__.py  main.py
heart-disease-mlops/src/heart_mlops/: __init__.py  config.py  data.py  eda.py  inference.py  pipeline_def.py  train.py
heart-disease-mlops/tests/: conftest.py  test_api.py  test_data.py  test_inference.py  test_pipeline.py  test_train_smoke.py
