[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-mlops"
version = "0.1.0"
description = "MLOps heart disease classifier (Cleveland UCI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "mlflow>=2.10",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "joblib>=1.3",
    "pydantic>=2.5",
    "prometheus-fastapi-instrumentator>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
